# Bug-Reporting-System

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  task.md
.github/workflows/: ci-cd.yaml
alembic/: env.py
alembic/versions/: 20240201_000000_001_initial_migration.py
app/: __init__.py  config.py  database.py  main.py  redis.py
app/api/: __init__.py  deps.py
app/api/v1/: __init__.py  auth.py  comments.py  health_check.py  issues.py  projects.py  router.py
app/core/: __init__.py  exceptions.py  permissions.py  security.py
app/middleware/: __init__.py  audit_logger.py  rate_limiter.py  request_id.py  security_headers.py
app/models/: __init__.py  comment.py  issue.py  project.py  types.py  user.py
app/schemas/: __init__.py  auth.py  comment.py  common.py  issue.py  project.py  user.py
app/services/: __init__.py  auth.py  comment.py  issue.py  project.py  user.py
app/utils/: __init__.py  markdown_sanitizer.py  validators.py
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secrets.yaml.example  service.yaml
nginx/: nginx.conf
nginx/ssl/: .gitkeep
scripts/: format.sh  generate_keys.py  seed_data.py
tests/: __init__.py  conftest.py  test_auth.py  test_comments.py  test_health.py  test_issues.py  test_models.py  test_projects.py  test_security.py  test_utils.py  test_validation.py
